k8s/services/microbin/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microbin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: bin.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microbin
                port:
                  name: http
    - host: bin.risson.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microbin
                port:
                  name: http
    - host: bin.marcerisson.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microbin
                port:
                  name: http
    - host: bin.risson.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microbin
                port:
                  name: http
  tls:
    - hosts:
        - bin.lama-corp.space
        - bin.risson.space
        - bin.marcerisson.space
        - bin.risson.me
      secretName: microbin-tls
